--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "multer": "^1.4.4",
     "npm-run-all": "^4.1.5",
     "peer": "^0.6.1",
-    "rimraf": "^3.0.2",
+    "rimraf": "^4.1.2",
     "socket.io": "^4.4.1",
+    "typescript": "^4.9.5",
     "uuid": "^8.3.2",
     "validator": "^13.7.0",
     "winston": "^3.6.0"
@@ -43,7 +44,7 @@
     "ts-node": "^10.7.0"
   },
   "engines": {
-    "node": "16.13.0"
+    "node": "^16.15.0"
   },
   "homepage": "https://github.com/Ashuto7h/Video-conferencing-app-backend#readme",
   "license": "ISC",
@@ -60,11 +61,11 @@
     "url": "git+https://github.com/Ashuto7h/Video-conferencing-app-backend.git"
   },
   "scripts": {
-    "build": "npm-run-all clean tsc",
-    "clean": "rimraf dist/*",
+    "prebuild": "rimraf dist",
+    "build": "tsc",
     "dev": "nodemon --watch './src/**/*' --exec ts-node src/index.js",
     "prettier": "prettier --write src/",
-    "start": "npm-run-all clean tsc && node dist/index.js",
+    "start": "build && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc"
   },
