--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@typescript-eslint/eslint-plugin": "^5.13.0",
-    "@typescript-eslint/parser": "^5.13.0",
-    "eslint": "^7.32.0",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
+    "eslint": "^8.33.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^16.0.3",
@@ -65,6 +65,7 @@
     "build": "tsc",
     "dev": "nodemon --watch './src/**/*' --exec ts-node src/index.js",
     "prettier": "prettier --write src/",
+    "lint": "eslint --fix src/**/*.{js,ts}",
     "start": "build && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc"
