--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
   },
   "description": "",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/uuid": "^9.0.0",
+    "@types/validator": "^13.7.11",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "eslint": "^8.33.0",
