--- a/package.json
+++ b/package.json
@@ -1,77 +1,73 @@
 {
-  "author": "",
-  "bugs": {
-    "url": "https://github.com/Ashuto7h/Video-conferencing-app-backend/issues"
-  },
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3",
-    "express-jwt": "^8.4.0",
-    "joi": "^17.6.0",
-    "moment": "^2.29.4",
-    "mongoose": "^6.9.0",
-    "multer": "^1.4.4",
-    "npm-run-all": "^4.1.5",
-    "peer": "^0.6.1",
-    "rimraf": "^4.1.2",
-    "socket.io": "^4.5.4",
-    "typescript": "^4.9.5",
-    "uuid": "^8.3.2",
-    "validator": "^13.7.0",
-    "winston": "^3.6.0"
-  },
-  "description": "",
-  "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/express": "^4.17.13",
-    "@types/uuid": "^9.0.0",
-    "@types/validator": "^13.7.11",
-    "@typescript-eslint/eslint-plugin": "^5.50.0",
-    "@typescript-eslint/parser": "^5.50.0",
-    "eslint": "^8.33.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^5.2.0",
-    "eslint-plugin-sort-keys-fix": "^1.1.2",
-    "eslint-plugin-standard": "^5.0.0",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.3.5",
-    "nodemon": "^2.0.20",
-    "prettier": "^2.5.1",
-    "ts-node": "^10.7.0"
-  },
-  "engines": {
-    "node": "^16.15.0"
-  },
-  "homepage": "https://github.com/Ashuto7h/Video-conferencing-app-backend#readme",
-  "license": "ISC",
-  "lint-staged": {
-    "*.js": [
-      "prettier --write",
-      "eslint --fix"
+    "name": "project-name",
+    "version": "0.0.1",
+    "description": "",
+    "author": "",
+    "private": true,
+    "license": "UNLICENSED",
+    "scripts": {
+        "build": "nest build",
+        "format": "prettier --write \"src/**/*.ts\"",
+        "start": "nest start",
+        "start:dev": "nest start --watch",
+        "start:debug": "nest start --debug --watch",
+        "start:prod": "node dist/main",
+        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+        "test": "jest",
+        "test:cov": "jest --coverage",
+        "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
+    },
+    "dependencies": {
+        "@nestjs/common": "^9.3.0",
+        "@nestjs/config": "^3.0.0",
+        "@nestjs/core": "^9.3.0",
+        "@nestjs/jwt": "^10.1.0",
+        "@nestjs/platform-express": "^9.0.0",
+        "@nestjs/sequelize": "^10.0.0",
+        "@nestjs/swagger": "^7.1.8",
+        "@swc/cli": "^0.1.62",
+        "@swc/core": "^1.3.78",
+        "@types/uuid": "^9.0.2",
+        "axios": "^1.4.0",
+        "bcrypt": "^5.1.1",
+        "class-transformer": "^0.5.1",
+        "class-validator": "^0.14.0",
+        "dotenv": "^16.3.1",
+        "helmet": "^7.0.0",
+        "reflect-metadata": "^0.1.13",
+        "rxjs": "^7.2.0",
+        "uuid": "^9.0.0",
+        "winston": "^3.10.0"
+    },
+    "devDependencies": {
+        "@nestjs/cli": "^9.0.0",
+        "@nestjs/schematics": "^9.0.0",
+        "@nestjs/testing": "^9.0.0",
+        "@types/bcrypt": "^5.0.0",
+        "@types/express": "^4.17.13",
+        "@types/jest": "^29.5.1",
+        "@types/node": "^18.16.12",
+        "@types/supertest": "^2.0.11",
+        "@typescript-eslint/eslint-plugin": "^6.4.0",
+        "@typescript-eslint/parser": "^6.4.0",
+        "eslint": "^8.0.1",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-airbnb-typescript": "^17.1.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-import": "^2.28.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-sort-keys": "^2.3.5",
+        "jest": "^29.5.0",
+        "prettier": "^2.3.2",
+        "source-map-support": "^0.5.20",
+        "supertest": "^6.1.3",
+        "ts-jest": "^29.1.0",
+        "ts-loader": "^9.2.3",
+        "ts-node": "^10.0.0",
+        "tsconfig-paths": "^4.2.0",
+        "typescript": "^5.1.6"
+    },
+    "bundledDependencies": [
+        "express"
     ]
-  },
-  "main": ".",
-  "name": "video-conferencing-app-backend",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Ashuto7h/Video-conferencing-app-backend.git"
-  },
-  "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "tsc",
-    "dev": "nodemon src/index.ts",
-    "prettier": "prettier --write src/",
-    "lint": "eslint --fix src/**/*.{js,ts}",
-    "start": "build && node dist/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "tsc": "tsc"
-  },
-  "version": "1.0.0"
 }
