--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "project-name",
+    "name": "video-conference",
     "version": "0.0.1",
     "description": "",
     "author": "",
@@ -25,14 +25,13 @@
         "@nestjs/platform-express": "^9.0.0",
         "@nestjs/sequelize": "^10.0.0",
         "@nestjs/swagger": "^7.1.8",
-        "@swc/cli": "^0.1.62",
-        "@swc/core": "^1.3.78",
         "@types/uuid": "^9.0.2",
         "axios": "^1.4.0",
         "bcrypt": "^5.1.1",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "dotenv": "^16.3.1",
+        "express": "^4.18.2",
         "helmet": "^7.0.0",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.2.0",
@@ -43,6 +42,9 @@
         "@nestjs/cli": "^9.0.0",
         "@nestjs/schematics": "^9.0.0",
         "@nestjs/testing": "^9.0.0",
+        "@swc/cli": "^0.1.62",
+        "@swc/core": "^1.3.78",
+        "@swc/jest": "^0.2.29",
         "@types/bcrypt": "^5.0.0",
         "@types/express": "^4.17.13",
         "@types/jest": "^29.5.1",
