--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
     },
     "dependencies": {
+        "@apollo/server": "^4.9.5",
+        "@nestjs/apollo": "^12.0.11",
         "@nestjs/common": "^9.3.0",
         "@nestjs/config": "^3.0.0",
         "@nestjs/core": "^9.3.0",
+        "@nestjs/graphql": "^12.0.11",
         "@nestjs/jwt": "^10.1.0",
         "@nestjs/platform-express": "^9.0.0",
         "@nestjs/sequelize": "^10.0.0",
@@ -32,6 +35,7 @@
         "class-validator": "^0.14.0",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "graphql": "^16.8.1",
         "helmet": "^7.0.0",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.2.0",
